# fitness-tracker

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .prettierignore  CLAUDE.md  CODE_REVIEW_REPORT.md  Fitness Tracker.docx  Makefile  README.md  alembic.ini  deliverables-checklist.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  executive-summary.md  fitness-tracker-spec.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  quick-start-dev.md
.cursor/: README.md
.cursor/agents/: backend-tdd-test-engineer.md  docs-and-spec-maintainer.md  product-architect-workout-features.md
.cursor/rules/: api-specification.mdc  backend-development.mdc  fitness-tracker-project.mdc  frontend-development.mdc  frontend-fsd-architecture.mdc  next-js.mdc  security-guidelines.mdc  testing-guidelines.mdc
.cursor/skills/commit-review/: SKILL.md  examples.md
.cursor/skills/design-workout-feature-tdd/: SKILL.md
.cursor/skills/git-commits-workflow/: SKILL.md
.cursor/skills/refactor-to-project-rules/: SKILL.md
.cursor/skills/update-specs-docs/: SKILL.md
deploy/: README.md
deploy/angie/: Dockerfile.prod  angie.dev.conf  angie.prod.conf
deploy/api/: Dockerfile
deploy/nginx/: nginx.conf
deploy/scripts/: deploy.sh
docs/: deliverables-checklist.md  design-reference.md  executive-summary.md  quick-start-dev.md
docs/architecture/: 00-overview.md  01-system-components.md  02-data-model.md  03-ml-architecture.md  04-flows.md  05-deployment.md  06-api-design.md  07-security.md  08-frontend-architecture.md
docs/design/: history-screen.html  login-screen.html  logup-screen.html  progress-chart-screen.html  workout-screen.html
docs/spec/: 01-overview.md  02-architecture.md  03-api-specification.md  04-testing-strategy.md  05-ui-ux-guidelines.md  06-best-practices.md  07-risk-assessment.md  08-timeline.md  README.md
docs/spec/roles/: backend-developer.md  frontend-developer.md  qa-engineer.md
docs/thesis/: build_thesis_docx.py  build_thesis_pptx.py  gen_er_diagram.py  gen_speech_docx.py  gen_store_assets.py  gen_uml_sequence.py  inbody_predictor_metrics.md  presentation-egor.pptx  presentation-maria.pptx  speech-maria.md  thesis-egor.docx  thesis-maria.docx  workout_recommender_metrics.md  Диплом-Лапова-Мария.docx  Речь-Лапова-Мария.docx  Сценарий-защиты-Лапова.docx
migrations/: env.py
migrations/versions/: 0001_init_users_auth.py  0002_exercises.py  0003_workouts.py  0004_seed_exercises.py  0005_user_profile.py  0006_inbody_measurements.py  0007_notifications.py  0008_inbody_forecast.py  0009_chat_adaptation.py  0009_plan_adaptation.py  0010_pdf_import_jobs.py  0011_inbody_pdf_key.py  0011_user_exercise_favorites.py  0012_exercises_owner.py  0012_profile_targets.py  0013_pdf_export_jobs.py  0014_workout_plans.py  0015_workouts_plan_day_id.py  0016_seed_full_catalog.py  0017_merge_exercise_catalog_heads.py  0017_user_exercise_favorites.py  0019_profile_equipment_available.py  0020_clean_exercise_catalog.py  0021_offline_client_ids.py  0022_supersets.py
ml/data/processed/: LICENSES.md  dataset_card.md  exercises_catalog.json  exercises_catalog_ru.json
ml/etl/: build_exercise_catalog.py  translate_exercises.py
ml/etl/inbody/: __init__.py  anchor.py  anonymize.py  build.py  cli.py  impute.py  sources.py  split.py  synthesize.py
ml/etl/workout_recommender/: __init__.py  build.py  cli.py  labelling.py
ml/training/: __init__.py
ml/training/inbody_timeseries/: __init__.py  compare.py  data.py  evaluate.py  manifest.py  persistence.py  train_lgbm.py  train_mlp.py  train_ridge.py
ml/training/workout_recommender/: __init__.py  compare.py  data.py  (+6 more)
monitoring/prometheus/: prometheus.yml
pwa/: README.md  l10n.yaml  pubspec.yaml
pwa/android/: key.properties.example
pwa/lib/: main.dart
pwa/test/: widget_test.dart
pwa/web/: index.html  manifest.json  privacy.html  terms.html
specs/: 000-overview.md  001-auth.md  002-user-profile.md  003-inbody-measurements.md  004-exercise-catalog.md  005-workout-tracking.md  006-ai-workout-generator.md  007-ai-nutrition-planner.md  008-ai-inbody-predictor.md  009-plan-adaptation-and-chat.md  009-plan-adaptation.md  010-analytics-reports.md  011-notifications.md  012-ml-dataset.md  013-inbody-pdf-import.md  014-exercise-favorites.md  015-offline-first.md  016-supersets.md
src/app/: config.py  db.py  email.py  main.py  security.py  storage.py
tests/: conftest.py
tests/integration/: conftest.py  test_adaptation_background.py  test_adaptation_rebuild.py  test_analytics_exercise_progress.py  test_analytics_export_pdf.py  test_analytics_goal_progress.py  test_analytics_inbody.py  test_analytics_workouts.py  test_auth_flow.py  test_inbody_pdf_service.py  test_inbody_pdf_signed_url.py  test_offline_idempotency.py  test_plans.py  test_supersets.py  test_workouts_plan_link.py
tests/unit/: test_email.py  test_prometheus_metrics.py  test_storage.py
(+207 files in other folders)
