[project]
name = "fitness-tracker"
version = "0.0.1"
description = "Fitness Tracker — backend (FastAPI + ML)"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.2",
    "aiosmtplib>=3.0",
    "pillow>=10.4",
    "boto3>=1.35",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.11",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-python-jose>=3.3",
    "boto3-stubs[s3]>=1.35",
    "testcontainers[postgres]>=4.7",
    "asgi-lifespan>=2.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests touching IO (DB, network)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
# Проект ведётся на русском, false-positives на смешанные алфавиты не нужны.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
