[project]
name = "fitness-tracker"
version = "0.0.1"
description = "Fitness Tracker — backend (FastAPI + ML)"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.2",
    "aiosmtplib>=3.0",
    "pillow>=10.4",
    "boto3>=1.35",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.11",
    "reportlab>=4.2",
    "prometheus-fastapi-instrumentator>=7.0,<8",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-python-jose>=3.3",
    "boto3-stubs[s3]>=1.35",
    "testcontainers[postgres]>=4.7",
    "asgi-lifespan>=2.1",
]
# Тяжёлые ML-зависимости держим отдельной группой — прод-API не тянет
# numpy/pandas/lightgbm. Группа ставится локально для обучения и в CI
# при запуске только `make ml-*` целей; runtime сервиса работает без них
# (см. ml_predictor.py — он опционально импортирует joblib через try/except).
ml = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "joblib>=1.4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests touching IO (DB, network)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
# Проект ведётся на русском, false-positives на смешанные алфавиты не нужны.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# В ML-коде `X` верхнего регистра — стандарт sklearn (X = матрица фичей,
# y = вектор меток). Менять в lowercase бессмысленно — теряется
# читабельность и расхождение с документацией библиотеки.
"ml/training/**" = ["N803", "N806"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

# ml/training — pandas/sklearn/lightgbm slabo типизированы; держим
# проверку, но не strict (иначе придётся обмазываться `# type: ignore`
# на каждый pd.DataFrame). На прод-код и forecast/ml_predictor.py
# strict сохраняется (они в files=["src"]).
[[tool.mypy.overrides]]
module = ["lightgbm.*", "sklearn.*", "joblib"]
ignore_missing_imports = true

# reportlab type-stubs не входят в основной пакет; для генерации PDF
# (spec 010) нам достаточно использовать его как «чёрный ящик» — strict
# не теряем на остальном коде, а в pdf_report.py границы reportlab API
# узкие и хорошо документированы.
[[tool.mypy.overrides]]
module = ["reportlab.*"]
ignore_missing_imports = true
